# tana-lang

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test_on_push_or_pull_request.yml
tana_lang_codegen/: Cargo.toml
tana_lang_codegen/src/: lib.rs
tana_lang_core/: Cargo.toml
tana_lang_core/src/: lexer.rs  lib.rs  parser.rs  semantizer.rs
tana_lang_core/src/data/: mod.rs  token.rs
tana_lang_core/src/data/ast/: ctor.rs  mod.rs
tana_lang_core/src/data/code_span/: iter.rs  mod.rs
tana_lang_core/src/data/constructs/: abs.rs  access.rs  app.rs  arrow.rs  base.rs  cn.rs  data.rs  expr.rs  karrow.rs  kbase.rs  kn.rs  macros.rs  mod.rs  newty.rs  qual.rs  scope.rs  tapp.rs  tvar.rs  ty.rs  var.rs
tana_lang_core/src/data/errors/: lexer.rs  macros.rs  mod.rs  parser.rs  semantizer.rs
tana_lang_core/src/data/semantizer_context/: mod.rs  prelude.rs
tana_lang_core/src/data/store/: generic_store.rs  id_provider.rs  id_store.rs  mod.rs  qual_stack.rs
tana_lang_core/src/data/typing/: mod.rs  ty_env.rs
tana_lang_test/: Cargo.toml
tana_lang_test/tests/: test.rs
tana_lang_test/tests/test_001/: mod.rs
